[tool.poetry]
name = "balto"
version = "0.3.0"
description = "BAlto is a Language independent Test Orchestrator"
license = "MIT"
authors = ["Boris Feld <lothiraldan@gmail.com>"]
packages = [
    {include = "balto/**/*.py"}
]
readme = "README.md"
homepage = "https://lothiraldan.github.io/balto/"
repository = "https://github.com/Lothiraldan/balto"
include = ["balto/web_interfaces/balto_react/build/**/*"]
exclude = ["balto/web_interfaces/balto_react/node_modules/**/*", "balto/web_interfaces/simple/src/elm-stuff/**/*"]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
aiodocker = "^0.19.1"
docker = "^4.4.1"
npyscreen = "^4.10"
prompt_toolkit = "^2.0"
urwid = "^2.0"
tomlkit = "^0.7.0"
fastapi = "^0.68.1"
aiofiles = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
balto = "balto.cli:main"
balto-server = "balto.new_server:main"
balto-curses = "balto.interfaces.curses:main"

[build-system]
requires = ["poetry>=0.12.17"]
build-backend = "poetry.masonry.api"

